; ModuleID = '/home/carl/AnghaBench/radare2/libr/anal/extr_esil2reil.c_reil_larger.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/anal/extr_esil2reil.c_reil_larger.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @reil_larger to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @reil_larger(i32* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  %6 = load i32*, i32** %3, align 8
  %7 = call i32* @reil_pop_arg(i32* %6)
  store i32* %7, i32** %4, align 8
  %8 = load i32*, i32** %4, align 8
  %9 = icmp ne i32* %8, null
  br i1 %9, label %11, label %10

10:                                               ; preds = %1
  store i32 0, i32* %2, align 4
  br label %32

11:                                               ; preds = %1
  %12 = load i32*, i32** %3, align 8
  %13 = call i32* @reil_pop_arg(i32* %12)
  store i32* %13, i32** %5, align 8
  %14 = load i32*, i32** %5, align 8
  %15 = icmp ne i32* %14, null
  br i1 %15, label %19, label %16

16:                                               ; preds = %11
  %17 = load i32*, i32** %4, align 8
  %18 = call i32 @R_FREE(i32* %17)
  store i32 0, i32* %2, align 4
  br label %32

19:                                               ; preds = %11
  %20 = load i32*, i32** %3, align 8
  %21 = load i32*, i32** %4, align 8
  %22 = call i32 @reil_push_arg(i32* %20, i32* %21)
  %23 = load i32*, i32** %3, align 8
  %24 = load i32*, i32** %5, align 8
  %25 = call i32 @reil_push_arg(i32* %23, i32* %24)
  %26 = load i32*, i32** %3, align 8
  %27 = call i32 @reil_smaller(i32* %26)
  %28 = load i32*, i32** %5, align 8
  %29 = call i32 @R_FREE(i32* %28)
  %30 = load i32*, i32** %4, align 8
  %31 = call i32 @R_FREE(i32* %30)
  store i32 1, i32* %2, align 4
  br label %32

32:                                               ; preds = %19, %16, %10
  %33 = load i32, i32* %2, align 4
  ret i32 %33
}

declare dso_local i32* @reil_pop_arg(i32*) #1

declare dso_local i32 @R_FREE(i32*) #1

declare dso_local i32 @reil_push_arg(i32*, i32*) #1

declare dso_local i32 @reil_smaller(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
